--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,7 +13,7 @@ jobs:
     env:
       PERL_CACHE: ~/perl5 # Perlbrew and CPAN modules installed here, cached
       NPG_LIB: ~/perl5npg # NPG modules installed here, not cached
-      WSI_NPG_GITHUB_URL: https://github.com/wtsi-npg
+      WSI_NPG_GITHUB_URL: https://github.com/jmtcsngr
       WSI_NPG_BUILD_BRANCH: ${{ github.base_ref}}
       WSI_NPG_GITHUB_REPO_OWNER: ${{ github.repository_owner }}
 
